--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,7 @@ h1.sectionTitle:after{
     color: var(--white);
     border: 3px solid var(--white);
     border-radius: 3rem;
+    cursor: pointer;
 }
 /*--------------------------HEADER SECTION STARTS----------------------------------------*/
 #header{
@@ -166,7 +167,11 @@ h1.sectionTitle:after{
     width: 40%;
 }
 #sideNav .toggle{
+    cursor: pointer;
     text-align: right;
+}
+#navToggle{
+    cursor: pointer;
 }
 #sideNav input{
     width: 100%;
@@ -311,6 +316,32 @@ footer .buttons{
 /*--------------------------GOUP SECTION ENDS----------------------------------------*/
 
 
+/*--------------------------ARTICLE SECTION STARTS----------------------------------------*/
+
+article.blog{
+    background-color: var(--white);
+    border-top: 5rem solid var(--light);
+    border-bottom: 5rem solid var(--light);
+    padding: 2rem 0;
+}
+article.blog h1{
+    font-size: 2rem;
+    padding: 0.5rem;
+}
+article.blog .blogImage{
+    width: 100%;
+    padding: 0.5rem;
+}
+article.blog p{
+    padding: 0.5rem;
+    text-align: center;
+}
+article.blog h2{
+    padding: 0.3rem;
+}
+/*--------------------------ARTICLE SECTION ENDS----------------------------------------*/
+
+
 /*--------------------------OVERWRITE STARTS----------------------------------------*/
 .scrolled{
     background-color: var(--themeRed);
@@ -324,7 +355,7 @@ footer .buttons{
 }
 .show{
     display: block!important;
-}
+}   
 /*--------------------------OVERWRITE ENDS----------------------------------------*/
 
 
@@ -392,6 +423,15 @@ footer .buttons{
     footer div.copy{
         text-align: left;
         margin: 1rem;
+    }
+
+    article.blog{
+        border-top: 10rem solid var(--light);
+        border-bottom: 5rem solid var(--light);
+        padding: 4rem;
+    }
+    article.blog p{
+        text-align: left;
     }
 }
 /*--------------------------MEDIA QUERIES TABLET----------------------------------------*/
@@ -466,6 +506,32 @@ footer .buttons{
     }
     footer{
         padding: 1rem 15%;
+    }
+
+    main.blogContainer{
+        display: grid;
+        grid-template-columns: 3fr 1fr;
+        grid-gap: 1rem;
+    }
+    main.blogContainer aside{
+        border-top: 8rem solid transparent;
+        border-bottom: 5rem solid transparent;
+    }
+    main.blogContainer aside .cardsContainer{
+        display: flex;
+        flex-direction: column;
+    }
+    main.blogContainer .subCategory{
+        padding: 2rem 0.3rem;
+    }
+    main.blogContainer .subCategory .sectionTitle{
+        font-size: 2.5rem;
+    }
+    main.blogContainer .subCategory .cardImg{
+        height: 100%;
+    }
+    main.blogContainer .popular{
+        grid-column: 1/3;
     }
 }
 /*--------------------------MEDIA QUERIES COMPUTER----------------------------------------*/
