--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
     --white: #fff;
     --black: #000;
     --light: #ebebeb;
-    --themeRed: #d2232e;
+    --theme: #292929;
     --themeGreen: rgb(0, 102, 0);
     --dark: #444;
     --darker: #222;
@@ -22,7 +22,9 @@
 img{
     width: 100%;
 }
-.imgContainer, .cardContainer{
+.imgContainer,
+.cardContainer,
+.cardImg{
     overflow: hidden;
 }
 body{
@@ -83,7 +85,7 @@ h1.sectionTitle{
 h1.sectionTitle:before{
     content: '';
     display: inline-block;
-    background-color: var(--themeRed);
+    background-color: var(--theme);
     width: 10px;
     margin: 0 1rem;
     height: 3rem;
@@ -91,7 +93,7 @@ h1.sectionTitle:before{
 h1.sectionTitle:after{
     content: '';
     display: inline-block;
-    background-color: var(--themeRed);
+    background-color: var(--theme);
     width: 10px;
     height: 3rem;
     margin: 0 1rem;
@@ -108,10 +110,6 @@ h1.sectionTitle:after{
 .card .content{
     padding: 1rem 0.5rem;
 }
-.card .cardImg{
-    height: 200px;
-    overflow: hidden;
-}
 .cardImg img{
     transform: scale(0.95);
     transition: transform 0.4s;
@@ -125,7 +123,7 @@ h1.sectionTitle:after{
 }
 .buttons{
     padding: 0.5rem 1rem;
-    background-color: var(--themeRed);
+    background-color: var(--theme);
     color: var(--white);
     border: 3px solid var(--white);
     border-radius: 3rem;
@@ -148,21 +146,25 @@ h1.sectionTitle:after{
     position: fixed;
     z-index: 99;
     top: 3rem;
-    width: 24rem;
+    width: 20rem;
     min-height: 100%;
     transition: background-color 0.3s, color 0.3s;
     overflow-y: scroll;
     bottom: 0;
     padding-bottom: 4rem;
-    transform: translateX(-24rem);
+    transform: translateX(-20rem);
     transition: transform 0.3s;
 }
+#sideNav .mainNav{
+    padding-bottom: 2rem;
+}
 #sideNav li{
-    padding: 0.3rem 0;
+    padding: 0.6rem;
+    font-family: 'Lato', sans-serif;
 }
 #sideNav li div{
     display: inline-block;
-    width: 40%;
+    width: 49%;
 }
 #sideNav .toggle{
     cursor: pointer;
@@ -175,10 +177,13 @@ h1.sectionTitle:after{
     width: 100%;
     padding: 0.4rem;
     border: none;
-    outline-color: var(--themeRed);
+    outline-color: var(--theme);
 }
 #sideNav .subMenu{
     display: none;
+}
+#sideNav .subMenu li{
+    padding: 0.3rem 0;
 }
 /*--------------------------HEADER SECTION ENDSS----------------------------------------*/
 
@@ -247,9 +252,6 @@ h1.sectionTitle:after{
     grid-template-columns: 1fr 1fr;
     grid-gap: 0.5rem;
 }
-.subCategory .cardImg{
-    height: 100px;
-}
 .subCategory .card{
     background-color: var(--white);
 }
@@ -263,7 +265,7 @@ h1.sectionTitle:after{
 
 /*--------------------------FOOTER SECTION ENDS----------------------------------------*/
 footer{
-    background-color: var(--themeRed);
+    background-color: var(--theme);
     color: var(--white);
     padding: 1rem 0 0.2rem 0;
 }
@@ -300,7 +302,7 @@ footer .buttons{
     position: fixed;
     bottom: 1rem;
     right: 1rem;
-    background-color: var(--themeRed);
+    background-color: var(--theme);
     height: 3rem;
     width: 3rem;
     text-align: center;
@@ -342,7 +344,7 @@ article.blog h2{
 
 /*--------------------------OVERWRITE STARTS----------------------------------------*/
 .scrolled{
-    background-color: var(--themeRed);
+    background-color: var(--theme);
     color: var(--white);
 }
 .scrolled a{
@@ -355,6 +357,21 @@ article.blog h2{
     display: block!important;
 }   
 /*--------------------------OVERWRITE ENDS----------------------------------------*/
+
+/*--------------------------SCROLLBAR SECTION STARTS----------------------------------------*/
+::-webkit-scrollbar {
+    width: 10px;
+}
+::-webkit-scrollbar-track {
+    background: var(--light);
+}
+::-webkit-scrollbar-thumb {
+    background: var(--dark);
+}
+::-webkit-scrollbar-thumb:hover {
+    background: var(--darker);
+}
+/*--------------------------SCROLLBAR SECTION STARTS----------------------------------------*/
 
 
 /*--------------------------MEDIA QUERIES TABLET----------------------------------------*/
@@ -403,6 +420,7 @@ article.blog h2{
     .superCategory .cardsContainer{
         display: grid;
         grid-template-columns: 1fr 1fr;
+        grid-gap: 1rem;
     }
     .superCategory .whole{
         grid-column: 1/3;
@@ -534,3 +552,6 @@ article.blog h2{
 }
 /*--------------------------MEDIA QUERIES COMPUTER----------------------------------------*/
 
+.cardImg{
+    overflow: hidden;
+}
